# pkg

./: .gitignore  AGENTS.md  README.md  pkg.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: integration_test.sh
src/pkg/: cli.py  config.py  hooks.py  init.py  plugins.py  runner.py
src/pkg/init_hooks/: __init__.py  agent_md.py  git.py  readme.py
src/pkg/tools/: __init__.py  base.py  bash.py  bun.py  go.py  uv.py
test/: pkg.toml
testing-golang/: pkg.toml
tests/: test_cli.py  test_config.py  test_hooks.py  test_init.py  test_init_hooks.py  test_plugins.py  test_runner.py  test_tools_bash.py  test_tools_bun.py  test_tools_go.py  test_tools_init.py  test_tools_uv.py
