[project]
name = "pkg"
version = "0.1.0"
description = "Unified CLI tool that wraps language-specific build tools with hooks and plugins"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
pkg = "pkg.cli:main"

[project.entry-points."pkg.plugins"]
# Example: my_plugin = "my_plugin:Plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkg"]
